--- a/finalProject/pom.xml
+++ b/finalProject/pom.xml
@@ -14,4 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.squareup/gifencoder -->
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>gifencoder</artifactId>
+            <version>0.10.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
